--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="WebSocketSharp-netstandard" version="1.0.1" targetFramework="net472" />
 </packages>
